Made to the text

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,11 +22,9 @@
       <img class="img-fluid" id="banner" src="https://d8470372-c1d6-4fd9-aa67-43dbf09f83f1-00-fi4xziqh3rm6.picard.replit.dev/static/banner.jpeg">
       <h2 class="text-center mt-2 mb-4">About Y </h2>
       <p class="lead">
-        SeekOut unifies talent acquisition, talent management, and talent analytics in one platform. Grow your employees and recruit the people you need with actionable analytics to support every decision.
-  
-        Request a live demo with one of our experts and see for yourself why SeekOut is the clear leader in talent optimization.
+        Y binds together ability procurement, ability the executives, and ability examination in one stage. Develop your workers and select individuals you want with noteworthy investigation to help each choice. Demand a live demo with one of our specialists and see with your own eyes why Y is the unmistakable forerunner in ability improvement.
       </p>
-      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <h2 class="text-center mt-2 mb-4">Job Openings</h2>
       <div>
         {% for job in jobs %}
           {% include 'jobitem.html' %}
