--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,7 @@
     </style>
   </head>
   <body>
+    {% include 'nav.html' %}
     <div class="container">
       <h1 class="text-center mt-2 mb-4">{{company_name}} JOB BOARD</h1>
       <img class="img-fluid" id="banner" src="https://d8470372-c1d6-4fd9-aa67-43dbf09f83f1-00-fi4xziqh3rm6.picard.replit.dev/static/banner.jpeg">
@@ -32,9 +33,9 @@
       </div>
       <div class="text-center">
       <button class="btn btn-primary btn-lg mt-4 mb-2">Reach us</button>
-        <p class="mt-2">Copyright 2024, Gopi</p>
       </div>
     </div>
+    {% include 'footer.html' %}
   </body>
   
 </html>
